--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,42 +12,51 @@
         android:id="@+id/std_spinner"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="21dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_std"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/git_link"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_see_records" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_add_record" />
 
     <Button
         android:id="@+id/btn_see_records"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="8dp"
-        android:text="View All"
-        app:layout_constraintBottom_toTopOf="@+id/std_spinner"
-        app:layout_constraintEnd_toEndOf="@+id/std_spinner"
-        app:layout_constraintStart_toStartOf="@+id/btn_add_record"
-        app:layout_constraintTop_toBottomOf="@+id/btn_add_record" />
+        android:layout_height="47dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="31dp"
+        android:text="View"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add_record"
+        app:layout_constraintEnd_toStartOf="@+id/btn_add_record"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_add_record"
-        android:layout_width="161dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="7dp"
+        android:layout_width="181dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="56dp"
         android:text="Insert"
-        app:layout_constraintBottom_toTopOf="@+id/btn_see_records"
+        app:layout_constraintBottom_toTopOf="@+id/std_spinner"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_see_records"
         app:layout_constraintTop_toBottomOf="@+id/txt_manzil" />
+
+    <EditText
+        android:id="@+id/txt_manzil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Manzil"
+        android:inputType="number"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
+        android:layout_marginBottom="8dp"
         android:background="#00673AB7"
         android:backgroundTint="#673AB7"
         android:text="Manzil"
@@ -55,7 +64,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txt_manzil"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/txt_sabki"
         app:layout_constraintTop_toBottomOf="@+id/txt_sabki" />
 
     <EditText
@@ -63,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Date"
         android:inputType="date"
@@ -87,8 +96,8 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="46dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="5dp"
         android:background="#00673AB7"
         android:backgroundTint="#673AB7"
         android:text="Sabak"
@@ -99,23 +108,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_date" />
 
-    <EditText
-        android:id="@+id/txt_sabki"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="7dp"
-        android:ems="10"
-        android:hint="Sabki"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:background="#00673AB7"
         android:backgroundTint="#673AB7"
         android:text="Sabki"
@@ -127,24 +124,22 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_sabak" />
 
     <EditText
-        android:id="@+id/txt_manzil"
+        android:id="@+id/txt_sabki"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="14dp"
         android:ems="10"
-        android:hint="Manzil"
+        android:hint="Sabki"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_record"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:background="#00673AB7"
         android:backgroundTint="#673AB7"
         android:text="Date"
@@ -156,29 +151,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_add_std"
-        android:layout_width="291dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="46dp"
-        android:text="Add Student"
-        app:layout_constraintBottom_toTopOf="@+id/git_link"
-        app:layout_constraintEnd_toEndOf="@+id/std_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/std_spinner" />
-
-    <Button
         android:id="@+id/git_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="87dp"
-        android:layout_marginEnd="87dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="53dp"
         android:text="Git Commits"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_see_records"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btn_add_std"
-        app:layout_constraintTop_toBottomOf="@+id/btn_add_std" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_add_std"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_add_std"
+        android:layout_width="170dp"
+        android:layout_height="59dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginBottom="52dp"
+        android:text="Add Student"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/git_link"
+        app:layout_constraintTop_toBottomOf="@+id/std_spinner" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
