--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,8 @@
 
     <EditText
         android:id="@+id/txt_manzil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="363dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -68,8 +68,8 @@
 
     <EditText
         android:id="@+id/txt_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="367dp"
+        android:layout_height="49dp"
         android:layout_marginStart="3dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
@@ -80,8 +80,8 @@
 
     <EditText
         android:id="@+id/txt_sabak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="372dp"
+        android:layout_height="47dp"
         android:layout_marginStart="3dp"
         android:ems="10"
         android:inputType="number"
@@ -122,8 +122,8 @@
 
     <EditText
         android:id="@+id/txt_sabki"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="372dp"
+        android:layout_height="40dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
